--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         
         <!-- Popular Content -->
         <h2>MÁS CONTENIDO</h2>
-        <a class="featured" href="">LINK 1</a>
-        <a class="featured" href="">LINK 2</a>
-        <a class="featured" href="">LINK 3</a>
+        <a href="">LINK 1</a>
+        <a href="">LINK 2</a>
+        <a href="">LINK 3</a>
     
         <!-- Channels-->
         <h2>SÍGUENOS</h2>
