--- a/links/index.html
+++ b/links/index.html
@@ -15,13 +15,11 @@
 
         <!-- Featured -->
         <h2>DESTACADO</h2>
-        <a class="featured" href="">Únete como miembro a GMC 2022</a>
+        <a class="featured" href="">Únete como miembro a GMC</a>
         
         <!-- Popular Content -->
         <h2>MÁS CONTENIDO</h2>
-        <a href="">LINK 1</a>
-        <a href="">LINK 2</a>
-        <a href="">LINK 3</a>
+        <a href="">Participa en las necropsias en primates no humanos</a>
     
         <!-- Channels-->
         <h2>SÍGUENOS</h2>
