--- a/links/index.html
+++ b/links/index.html
@@ -15,11 +15,11 @@
 
         <!-- Featured -->
         <h2>DESTACADO</h2>
-        <a class="featured" href="">Únete como miembro a GMC</a>
+        <a class="featured" href="https://forms.gle/1H468wScwrGg8oeq9">Únete como miembro a GMC</a>
         
         <!-- Popular Content -->
         <h2>MÁS CONTENIDO</h2>
-        <a href="">Participa en las necropsias en primates no humanos</a>
+        <a href="https://forms.gle/KxjzJFytz4HzxZ5v8">Participa en las necropsias de primates no humanos</a>
     
         <!-- Channels-->
         <h2>SÍGUENOS</h2>
