--- a/links/index.html
+++ b/links/index.html
@@ -18,8 +18,8 @@
         <a class="featured" href="https://forms.gle/1H468wScwrGg8oeq9">Únete como miembro a GMC</a>
         
         <!-- Popular Content -->
-        <h2>MÁS CONTENIDO</h2>
-        <a href="https://forms.gle/KxjzJFytz4HzxZ5v8">Participa en las necropsias de primates no humanos</a>
+        <!--<h2>MÁS CONTENIDO</h2>
+        <<a href="https://forms.gle/KxjzJFytz4HzxZ5v8">Participa en las necropsias de primates no humanos</a>>
     
         <!-- Channels-->
         <h2>SÍGUENOS</h2>
