--- a/links/index.html
+++ b/links/index.html
@@ -16,7 +16,7 @@
         <!-- Featured -->
         <h2>DESTACADO</h2>
         <a class="featured" href="https://forms.gle/1H468wScwrGg8oeq9">Únete como miembro a GMC</a>
-        <a class="featured" href="https://docs.google.com/forms/d/e/1FAIpQLSdqm9TsveG5QJxbRUVvn6a-xTRJJvCvTWLu92GozJrhgff3XQ/viewform?usp=sf_link">Charla N°2: El Ave Rapaz en el Consultorio</a>
+        <a class="featured" href="https://forms.gle/GntkjE1Vgif542t48">Preinscripción - Salida de campo en Trujillo</a>
         
         <!-- Popular Content -->
         <!--<h2>MÁS CONTENIDO</h2>
