--- a/links/index.html
+++ b/links/index.html
@@ -17,6 +17,8 @@
         <h2>DESTACADO</h2>
         <a class="featured" href="https://forms.gle/1H468wScwrGg8oeq9">Únete como miembro a GMC</a>
         <a class="featured" href="https://forms.gle/GntkjE1Vgif542t48">Preinscripción - Salida de campo en Trujillo</a>
+        <a class="featured" href="https://forms.gle/u7wewwahxSyy9Mqr5">Charla virtual: Conservación de las Nutrias Marinas</a>
+        
         
         <!-- Popular Content -->
         <!--<h2>MÁS CONTENIDO</h2>
