--- a/links/index.html
+++ b/links/index.html
@@ -16,7 +16,7 @@
         <!-- Featured -->
         <h2>DESTACADO</h2>
         <a class="featured" href="https://forms.gle/1H468wScwrGg8oeq9">Únete como miembro a GMC</a>
-        <a class="featured" href="https://forms.gle/fV8exNgsAaTmbi3t8">Medicina Básica de Conejos: clases teóricas</a>
+        <a class="featured" href="https://forms.gle/pz8vmPuvuB4LzueF9">Medicina Básica de Conejos: clases teóricas</a>
         
         
         <!-- Popular Content -->
