--- a/links/index.html
+++ b/links/index.html
@@ -15,7 +15,7 @@
 
         <!-- Featured -->
         <h2>DESTACADO</h2>
-        <a class="featured" href="https://forms.gle/1H468wScwrGg8oeq9">Únete como miembro a GMC</a>
+        <a class="featured" href="https://forms.gle/HgzwAJVMCNC86856A">Únete como miembro a GMC</a>
         
         
         <!-- Popular Content -->
